--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SudokuSolver</title>
+    <title>SudokuSolver2</title>
     <link href="styles.css" rel="stylesheet">
     <script src="script.js" defer></script>
 </head>
