--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SudokuSolver2</title>
+    <title>SudokuSolver</title>
     <link href="styles.css" rel="stylesheet">
     <script src="script.js" defer></script>
 </head>
 <header>
     <h1>
-        Sudoku Solver
+        Sudoku Solver2
     </h1>
 </header>
 <body>
